snd_hda: Patch Lenovo V15

PR:		290496
Tested by:	adrian
Sponsored by:	The FreeBSD Foundation
MFC after:	1 week